--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a class="navbar-brand" href="#">
       <img src="./imagenes/logo TM.jpeg" alt="Bootstrap" width="150" height="150">
     </a>
-  
+  <!-- navegador -->
 <nav class="navbar navbar-expand-lg bg-ligth-tertiary lead">
   <div class="container-fluid">
     <a class="navbar-brand" href="./index.html">TM.Sahumerios</a>
@@ -41,7 +41,7 @@
 
 
 <main>
-
+<!-- carrusel -->
 
 <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
@@ -71,7 +71,7 @@
 
 
 
-
+<!-- catalogos de productos -->
 <div class="productos text-center p-5 ">
     <h2>Productos</h2>
 </div>
@@ -168,7 +168,7 @@
 
 </main>
 
-
+<!-- pie de pagina -->
 
 <footer>
   <section class="footer">
