--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 
 
-<nav class="navbar bg-light-tertiary">
+<nav class="navbar">
   <div class="container">
     <a class="navbar-brand" href="#">
       <img src="./imagenes/logo TM.jpeg" alt="Bootstrap" width="150" height="150">
     </a>
   <!-- navegador -->
-<nav class="navbar navbar-expand-lg bg-ligth-tertiary lead">
+<nav class="navbar navbar-expand-lg lead">
   <div class="container-fluid">
     <a class="navbar-brand" href="./index.html">TM.Sahumerios</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
