cambios en el orden

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -65,7 +65,7 @@
                       <img src="../imagenes/whatsapp.png" alt="#" class="card-img-top">
                       <div class="card-body">
                         <h5 class="card-title">Whatsapp</h5>
-                        <p class="card-text">Escribinos a nuestro whatsapp y recibi toda la informacion que estas buscando. precios y stock al dia</p>
+                        <p class="card-text">Escribinos a whatsapp y recibi toda la informacion que estas buscando. precios y stock al dia</p>
                         <a href="https://api.whatsapp.com/send?phone=5491133809223" class="btn btn-primary">Escribinos</a>
                       </div>
                     </div>
