--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-
+<!-- navegador -->
 
     <nav class="navbar bg-light-tertiary">
         <div class="container">
@@ -41,7 +41,7 @@
 
 
     <main>
-
+<!-- tarjetas de instagran y whatsapp -->
 
         <div class="productos text-center p-5 ">
             <h2>Contactos</h2>
@@ -70,7 +70,7 @@
                       </div>
                     </div>
                   </div>
-
+<!-- formulario de mensjes -->
 
                   <div class="productos text-center p-5">
                     <h2>Dejanos Tu Mensaje</h2>
@@ -99,7 +99,7 @@
 </main>
 
 
-
+<!-- pie de pagina -->
 
 
 <footer>
