--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -49,7 +49,7 @@
        
           <div class="container">
             <div class="row">
-              <div class="col-6">
+              <div class="col-12 col-md-6 col-lg-6">
                 <div class="card">
                   <img src="../imagenes/instagram-logo.png" alt="#" class="card-img-top">
                   <div class="card-body">
@@ -60,7 +60,7 @@
                 </div>
               </div>
             
-                  <div class="col-6">
+                  <div class="col-12 col-md-6 col-lg-6">
                     <div class="card">
                       <img src="../imagenes/whatsapp.png" alt="#" class="card-img-top">
                       <div class="card-body">
