--- a/index.html
+++ b/index.html
@@ -6,30 +6,35 @@
     <title>TMsahumerios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="icon" href="./imagenes/logo TM.jpeg">
+    <link rel="icon" href="./imagenes/TM.jpg">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymouse"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <link href="https://fonts.googleapis.com/css2? familia=EB+Garamond:wght@400;500;600;700;800&display=swap" rel="hoja de estilo">
 </head>
 
 
+<header>
+
+<!-- navegador del index-->
 <nav class="navbar">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="./imagenes/logo TM.jpeg" alt="Bootstrap" width="150" height="150">
+      <img src="../imagenes/TM.logo.png" alt="Bootstrap" width="150" height="150">
     </a>
-  <!-- navegador -->
+  
 <nav class="navbar navbar-expand-lg lead">
   <div class="container-fluid">
     <a class="navbar-brand" href="./index.html">TM.Sahumerios</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler p-0 border-black border-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="./pages/productos.html">Productos</a>
-        <a class="nav-link" href="./pages/contactos.html">contactos</a>
-        <a class="nav-link" href="./pages/quienessomos.html">Quienes Somos</a>
-        <a class="nav-link" href="./pages/dondeestamos.html">Donde Estamos</a>
+        <a class="nav-link active" href="./pages/contactos.html">Contactos</a>
+        <a class="nav-link active" href="./pages/quienessomos.html">Quienes Somos</a>
+        <a class="nav-link active" href="./pages/dondeestamos.html">Donde Estamos</a>
       </div>
     </div>
   </div>
@@ -37,23 +42,26 @@
 </div>
 </nav>
 
-
+</header>
 
 
 
 <main>
-<!-- carrusel -->
+
+
+
+<!-- carrusel de imagenes-->
 
 <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./imagenes/elefante4.jpg" class="d-block w-100" alt="...">
+      <img src="./imagenes/elefante1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="./imagenes/buda1.jpg" class="d-block w-100" alt="...">
+      <img src="./imagenes/buda2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="./imagenes/paz2.jpg" class="d-block w-100" alt="...">
+      <img src="./imagenes/paz3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -74,7 +82,7 @@
 
 <!-- catalogos de productos -->
 <div class="productos text-center p-5 ">
-    <h2>Productos</h2>
+    <h2>Conoce Nuestros Productos</h2>
 </div>
 
 
@@ -85,7 +93,7 @@
         <img src="./imagenes/budasdecolores.jpeg" alt="#" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Buda De Colores</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, officia.</p>
+          <p class="card-text">el símbolo del Buda en sus diferentes iconografías es un gran activador de energía positiva.</p>
         </div>
       </div>
     </div>
@@ -94,7 +102,7 @@
         <img src="./imagenes/cascadas.jpeg" alt="#" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Cascadas De Humo</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, officia.</p>
+          <p class="card-text">Las cascadas de humo son por excelencia los quemadores de incienso que tienen sus orígenes en la cultura budista.</p>
         </div>
       </div>
     </div>
@@ -103,7 +111,7 @@
         <img src="./imagenes/cuencos.jpeg" alt="#" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Cuencos</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, officia.</p>
+          <p class="card-text">El sahumado con hierbas desbloquea energías, limpia y purifica los ambientes.Material: Cuencos redondos de cerámica.</p>
         </div>
       </div>
     </div>
@@ -112,7 +120,7 @@
         <img src="./imagenes/sahu patagonia.jpeg" alt="#" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Sahumerios</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, officia.</p>
+          <p class="card-text">Sahumar es una antigua técnica de limpieza espiritual y energética en la que se utiliza el humo de diversas hierbas y flores:</p>
         </div>
       </div>
     </div>
@@ -121,7 +129,7 @@
         <img src="./imagenes/conitos.jpeg" alt="#" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Conos</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, officia.</p>
+          <p class="card-text">A diferencia del sahumerio en varilla, no contiene madera, por lo que el humo es totalmente del aroma elegido</p>
         </div>
       </div>
     </div>
@@ -130,7 +138,7 @@
         <img src="./imagenes/shau magicos.jpeg" alt="#" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Sahumerios Magicos</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, officia.</p>
+          <p class="card-text">Fabricados a mano con hierbas y resinas naturales, tienen un grosor que duplica al sahumerio tradicional y potencia su fragancia.</p>
         </div>
       </div>
     </div>
@@ -139,7 +147,7 @@
         <img src="./imagenes/sahu en polvo.jpeg" alt="#" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Sahumerios En Polvo</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, officia.</p>
+          <p class="card-text">Los sahumerios en polvo son de aromas naturales, intensos y extra fuerte. Tienen la capacidad de llevar a tu hogar el equilibrio.</p>
         </div>
       </div>
     </div>
@@ -148,7 +156,7 @@
         <img src="./imagenes/hornito.jpeg" alt="#" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Hornitos</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, officia.</p>
+          <p class="card-text">Las fuentes de humo contribuyen a la armonización del hogar, son utilizados para meditación y aromaterapia.</p>
         </div>
       </div>
     </div>
@@ -157,12 +165,36 @@
         <img src="./imagenes/sahumitos.jpeg" alt="#" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Sahumitos</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, officia.</p>
+          <p class="card-text">El aroma despierta la creatividad y la energía positiva. las fragamcias da calma y refuerza la conexíon.</p>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<!-- baner de pie de pagina -->
+
+<div class="grid-container">
+  <div class="grid-item">
+    <h2>Sahumate</h2>
+    <p>La practica de sahumar es algo que se ha hecho desde hace literalmente miles de años y practicamente todas las civilizaciones antiguas lo realizaban como parte de sus rituales. Actualmente, cientos de personas encendemos sahumerios porque nos ayuda a encontrar paz, conectar con la naturaleza y sentir el ambiente más ligero.</p>
+  </div>
+  <div class="grid-item">
+    <img src="./imagenes/prendiendosahumeriodos.jpg" alt="#" class="#">
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
