--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <nav class="navbar">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="../imagenes/TM.logo.png" alt="Bootstrap" width="150" height="150">
+      <img src="./imagenes/TM.logo.png" alt="Bootstrap" width="150" height="150">
     </a>
   
 <nav class="navbar navbar-expand-lg lead">
