--- a/index.html
+++ b/index.html
@@ -174,17 +174,15 @@
 
 <!-- baner de pie de pagina -->
 
-<div class="grid-container">
-  <div class="grid-item">
+<div class="contenedor">
+
+  <div class="texto">
     <h2>Sahumate</h2>
     <p>La practica de sahumar es algo que se ha hecho desde hace literalmente miles de años y practicamente todas las civilizaciones antiguas lo realizaban como parte de sus rituales. Actualmente, cientos de personas encendemos sahumerios porque nos ayuda a encontrar paz, conectar con la naturaleza y sentir el ambiente más ligero.</p>
   </div>
-  <div class="grid-item">
-    <img src="./imagenes/prendiendosahumeriodos.jpg" alt="#" class="#">
-  </div>
+
+  <img class="imagen" src="./imagenes/prendiendosahumeriodos.jpg" alt="#">
 </div>
-
-
 
 
 
