--- a/pages/productos.html
+++ b/pages/productos.html
@@ -49,16 +49,18 @@
 <main>
 
 <!-- baner de productos -->
+<div class="contenedor">
 
-    <div class="grid-container">
-        <div class="grid-item">
-          <h2>buda</h2>
+  <div class="texto">
+    <h2>buda</h2>
           <p>En todas sus versiones, tantas veces vistas, irradia mensajes alentadores: abundancia, armonía, serenidad, salud, prosperidad. En sus diversas representaciones, delgadas o de figura voluminosa, sentado sobre sus piernas en actitud meditativa, sosteniendo diversos objetos o realizando mudras con las manos, hay algo que se mantiene imperturbable: la sensación de plenitud infinita.</p>
-        </div>
-        <div class="grid-item-dos">
-          <img src="../imagenes/BudaDePiedra.jpg" alt="#" class="w-100">
-        </div>
-      </div>
+  </div>
+
+  <img class="imagen" src="../imagenes/BudaDePiedra.jpg" alt="#">
+</div>
+
+          
+        
 
 
 
