--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -56,15 +56,17 @@
 
 
 <!-- baner de quines somos -->
-      <div class="grid-container">
-        <div class="grid-item">
-          <h2>Nosotros</h2>
-          <p>Somos un mini emprendimiento que nacio a principios de la pandemia, con el fin de llevar armonia y buena energia a todos nuestros clientes. Nuestros productos organicos y naturales con fragancias que inspiran y conectan con nuestro interior, cuidan al medio hambiente y hacen un mundo mejor.</p>
-        </div>
-        <div class="grid-item-dos">
-          <img src="../imagenes/baner-removebg.png" alt="#" class="#">
-        </div>
-      </div>
+<div class="contenedor">
+
+  <div class="texto">
+    <h2>Nosotros</h2>
+        <p>Somos un mini emprendimiento que nacio a principios de la pandemia, con el fin de llevar armonia y buena energia a todos nuestros clientes. Nuestros productos organicos y naturales con fragancias que inspiran y conectan con nuestro interior, cuidan al medio hambiente y hacen un mundo mejor.</p>
+  </div>
+
+  <img class="baner" src="../imagenes/baner-removebg.png" alt="#">
+</div>
+          
+        
 
 
 
