--- a/pages/productos.html
+++ b/pages/productos.html
@@ -73,7 +73,7 @@
 
 <!-- Nuestros sahumerios -->
 
-      <div class="productos text-center p-5 ">
+      <div class="productos text-center">
         <h2>Nuestros Sahumerios</h2>
     </div>
 
