--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -76,7 +76,7 @@
 
 <!-- tarjetas de instagran y whatsapp -->
 
-        <div class="productos text-center p-5 ">
+        <div class="productos text-center ">
             <h2>Contactos</h2>
           </div>
        
