--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactos</title>
+    <!-- tags de seo -->
+    <meta name="description" content="somos un mini emprendimiento que se dedica a comercializar sahumerios naturales">
+    <meta name="keywords" content="sahumerios, cuencos, cascada de humo, conos, difusores, buda, meditación, Hornitos">
+    <!-- icono de pagina -->
     <link rel="icon" href="../imagenes/TM.jpg">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <!-- link de sass -->
+    <link rel="stylesheet" href="../Sass/main.css">
+    <!-- link footer -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymouse"></script>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <!-- tipografia -->
     <link href="https://fonts.googleapis.com/css2? familia=EB+Garamond:wght@400;500;600;700;800&display=swap" rel="hoja de estilo">
 </head>
 <body>
@@ -76,7 +84,7 @@
 
 <!-- tarjetas de instagran y whatsapp -->
 
-        <div class="productos text-center ">
+        <div class="productos text-center">
             <h2>Contactos</h2>
           </div>
        
